[package]
authors = ["Brad Gibson"]
name = "cpp17cc"
version = "6.0.0"

[dependencies]
single = "0.3.0"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.failure]
version = "0.*"

[dependencies.polish]
git = "https://github.com/alkass/polish"
[dev-dependencies.pretty_assertions]
version = "*"

[features]
default = ["clippy"]
test = []
[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.doc]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[workspace]
